Course editor: Fixing mobile version spacing issue

--- a/src/main/webapp/course-editor/course-editor.style.client.css
+++ b/src/main/webapp/course-editor/course-editor.style.client.css
@@ -24,7 +24,6 @@ html, body {
 
 .ss-brand {
     color: #d9d9d9;
-    padding-left: 10px;
 }
 
 .ss-brand-title-header a.ss-brand:hover {
